--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.15"
+    "http": "^0.0.1-security",
+    "mongoose": "^5.10.15",
+    "socket.io": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
