--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "mongoose": "^5.10.15",
-    "socket.io": "^1.0.0"
+    "socket.io": "^1.0.0",
+    "@google-cloud/storage": "^2.5.0",
+    "apollo-server-express": "^2.5.0",
+    "graphql": "^14.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
